// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VidSrc Black Mirror 1`] = `
[
  {
    "format": "hls",
    "label": "CloudStream Pro",
    "meta": {
      "countryCodes": [],
      "height": 1040,
      "title": "Black Mirror (2011) S04E02",
    },
    "sourceId": "vidsrc_CloudStream-Pro_",
    "ttl": 10800000,
    "url": "https://tmstr5.shadowlandschronicles.com/pl/H4sIAAAAAAAAAw3N3W6DIBgA0FcC_JndpZ1oY8UK8qHcobh0ymxNFqs._Xp_kmOGD594Q2BCPxrQd9SZKDCnsPeR7bwoCD.7w155E3_VoOuSMla7.w5TgSVCa_2rkUq2R6kegQAm5MxI77Gf9rigXumZyfsZkOOAKe9S7OUeK3XiwBz9JjPr9PS3Csd4kXJlCWtzsq35.4P02bTj5QAAY.f4dkUQvF3Bas0MSfYS4kWq19aN0yZci4ZGvoaM3jp5qorMltUEuB9bIqjVGi67oUzA4R587LFo3MLV0wB1WCUTEUjuZuQU0Da1ki4mfZ5zdOIV5rHANv0Hv0Y7NiEBAAA-/master.m3u8",
  },
]
`;

exports[`VidSrc Full Metal Jacket 1`] = `
[
  {
    "format": "hls",
    "label": "CloudStream Pro",
    "meta": {
      "countryCodes": [],
      "height": 714,
      "title": "Full Metal Jacket (1987)",
    },
    "sourceId": "vidsrc_CloudStream-Pro_",
    "ttl": 10800000,
    "url": "https://tmstr4.shadowlandschronicles.com/pl/H4sIAAAAAAAAAw3Oy3KCMBhA4VcKBqh2p0UumRJKSP4Iu1ywkYDDUKuVp6_bs_jmWBVtg.3ZvMUoDqLAxOps.jDCsVHIbPrdu5FuqQQ5UGS_dELbZh3vegVfivna5I7wqcv6nJEuYKzGaUmn71Ajv1qAR4NSX51YLjOWdN6qXsKxOxWou76cqbzzy.63Pu2fkJCjSI64kuViE3fRGZl1OjvmU8cxYOPtR7u5PYDbVg0uEANU0rPLJyofYmBcJPu_Buif5OBoOi8tBsowKRhmaSPRUw2v7n9WO76uspno3Ec8LxYeHA5dAKGU3RM2YaibGzbZ7MqxCJVkmZJutdc6qhGROgNZrqnQIxsttgVMdBEc7f4BOJFmy0EBAAA-/master.m3u8",
  },
]
`;

exports[`VidSrc blocking issues are retried and fail if no tlds are left 1`] = `
[
  {
    "error": [Error],
    "format": "unknown",
    "isExternal": true,
    "label": "VidSrc",
    "meta": {},
    "sourceId": "vidsrc",
    "url": "https://vidsrc-embed.ru/embed/movie/fake2",
  },
]
`;

exports[`VidSrc rate limit issues are retried and fail if no tlds are left 1`] = `
[
  {
    "error": [Error],
    "format": "unknown",
    "isExternal": true,
    "label": "VidSrc",
    "meta": {},
    "sourceId": "vidsrc",
    "url": "https://vidsrc-embed.ru/embed/movie/fake1",
  },
]
`;
